# node-native-certs

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  test.js
.github/workflows/: publish.yml  test.yml
__test__/: certificate.crt  index.mjs  index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
