[package]
name = "node-native-certs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "1"

[dependencies]
napi = "2"
napi-derive = "2"
rustls-native-certs = "0.6.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "debuginfo"
